Tests/Error/Nested/OuterGoal.goal
OuterGoal
- call InnerGoal
- set %outerCompleted% = true
